--- a/position.html
+++ b/position.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- css link  -->
+    <link rel="stylesheet" href="./main.css">
     <title>Position</title>
 </head>
+
 <body>
-    
+    <section class="swim">
+        <div class="box boy"><img src="./swim/boy.svg" alt=""></div>
+        <div class="box ring"><img src="./swim/ring.svg" alt=""></div>
+        <div class="box water"><img  src="./swim/water.svg" alt=""></div>
+    </section>
+    <section class="next">
+        NEXT
+    </section>
 </body>
-</html>
+
+</html> 
